maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:15: error: '(' expected but identifier found.
if nombre=2
   ^